Update README.md
note